# tree-sitter-qmljs

./: CMakeLists.txt  Cargo.toml  go.mod
bindings/c/: tree-sitter-qmljs.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qmljs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQmljsTests/: TreeSitterQmljsTests.swift
