[package]
name = "tree-sitter-qmljs"
description = "QML grammar for the tree-sitter parsing library"
version = "0.2.0"
authors = ["Yuya Nishihara"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "qmljs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "git+https://github.com/yuja/tree-sitter-qmljs.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
